# puffo-agent

./: .gitignore  CHANGELOG.md  CHANGES-cloud-e2e.md  README.md  SETUP_FOR_AI.md  config.example.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-cloud-pkgs.yml  publish-pypi.yml  publish-testpypi.yml
.scratch/: codex_mcp_diag.py
docs/: ARCHITECTURE-REVIEW.md  ARCHITECTURE.md  FAT-CLOUD-ARCHITECTURE-REVIEW.md  FAT-CLOUD-ARCHITECTURE.md  perf-audit-2026-06-27.md  puffo-agent-architecture.drawio  puffo-agent-architecture.md
roadmap/cloud-agent/: FAT-E2B-INTEGRATION.md  KEYLESS-DISPATCH-PHASE1.md  PHASE25-SERVER-ROUTE-GAPS.md  PUFFO-AGENT-REFACTOR-PLAN.md
scripts/: api_puffo_mock_cloud.py
skills/suggest-agent/: SKILL.md
skills/suggest-channel/: SKILL.md
skills/suggest-invite/: SKILL.md
skills/use-puffo-agent-ws-local/: SKILL.md
src/puffo_agent/: __init__.py  _proc.py  limits.py
src/puffo_agent/agent/: _auth_markers.py  _invite_strings.py  _logging.py  _time.py  _visibility.py  auth_refresh.py  bridge_client.py  cli_bin.py  contact_cache.py  core.py  discord_client.py  disk_cache.py  dm_approvals.py  event_kinds.py  events.py  file_browser.py  memory.py  memory_errors.py  memory_git.py  memory_store.py  message_client.py  message_store.py  model_catalog.py  permission_prompt.py  puffo_core_client.py  shared_content.py  skills_loader.py  status_reporter.py
src/puffo_agent/agent/adapters/: __init__.py  base.py  chat_only.py  cli_cloud.py  cli_session.py  codex_session.py  desired_install.py  docker_cli.py  hermes_helpers.py  local_cli.py  sdk.py
src/puffo_agent/agent/api_puffo/: __init__.py  bundle.py  cloud_client.py  keystore.py  runner.py  tools.py
src/puffo_agent/agent/harness/: __init__.py  base.py  claude_code.py  codex.py  gemini_cli.py  hermes.py
src/puffo_agent/agent/providers/: anthropic_provider.py  openai_provider.py
src/puffo_agent/bridge/: http.py  ws.py
src/puffo_agent/cloud/: __init__.py
src/puffo_agent/cloud/bridge/: __init__.py  backup.py  client.py  message_client.py
src/puffo_agent/crypto/: attachments.py  canonical.py  certs.py  encoding.py  fingerprint.py  http_auth.py  http_client.py  http_session.py  keystore.py  message.py  primitives.py  test_vectors.json  test_vectors_from_rust.json  v2_aad.py  ws_client.py
src/puffo_agent/hooks/: permission.py
src/puffo_agent/macos/: __init__.py  credential_manager.py  keychain.py
src/puffo_agent/mcp/: __init__.py  _host_mcp.py  _lifespan.py  config.py  data_client.py  host_tools.py  lifecycle_tools.py  memory_tools.py  puffo_core_server.py  puffo_core_tools.py
src/puffo_agent/portal/: _port.py  background.py  cli.py  credential_refresh.py  cron_state.py  daemon.py  data_service.py  diagnostic.py  export.py  host_mcp_handler.py  import_agents.py  migration_certs.py  profile_sync.py  rpc_service.py  runtime_matrix.py  state.py  worker.py
src/puffo_agent/portal/api/: __init__.py  auth.py  certs.py  cors.py  handlers.py  ownership.py  pairing.py  server.py
src/puffo_agent/portal/control/: __init__.py  agent_create.py  agent_message.py  client.py  envelope.py  link.py  machine_auth.py  operator_names.py  reporter.py  store.py  usage_snapshot.py
src/puffo_agent/portal/ui/: daemon_thread.py  launcher.py  log_buffer.py  main_window.py  mcp_probe.py  names.py  style.py  tray.py
src/puffo_agent/portal/ui/assets/: __init__.py
src/puffo_agent/portal/ui/widgets/: agent_detail.py  agent_list.py  agent_workspace.py  avatar.py  home_view.py  log_view.py  mcp_status.py  operators_view.py  per_agent_log_source.py  rail.py
src/puffo_agent/portal/ws_local/: __init__.py  aiohttp_transport.py  auth.py  bridge.py  bundles.py  endpoint.py  hub.py  in_process_data_client.py  protocol.py  registry.py  route.py  session.py  tool_dispatch.py  ws_local_client.py
tests/: _bridge_support.py  conftest.py  test_agent_config_desired_lists.py  test_agent_create_finalize.py  test_agent_create_flow.py  test_agent_create_identity.py  test_agent_install.py  test_agent_message.py  test_agent_role.py  test_agent_sync.py  test_api_error_abandon_state.py  test_api_error_recovery_state.py  test_api_puffo_bundle.py  test_api_puffo_runner.py  test_archive_check.py  test_archive_codex_tmp_drain.py  test_attachment_annotation.py  test_auth_error_classification.py  test_auth_failed_dm_notification.py  test_auth_refresh.py  test_auto_accept_dm.py  test_auto_accept_space_invites.py  test_background.py  test_batch_reaches_adapter.py  test_bridge_auth.py  test_bridge_cors.py  test_bridge_export_import.py  test_bridge_handlers.py  test_catchup_staleness_gate.py  test_channel_cache_selfheal.py  test_channel_intro_nudge.py  test_channel_membership_system_message.py  test_channel_space_seed.py  test_chat_local_tool_use.py  test_cli_bin.py  test_cli_cloud.py  test_cli_local_mcp_trust.py  test_cli_python_version.py  test_cli_session_recovery.py  test_cloud_agent_read_twin.py  (+148 more)
