[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# Distributed as `puffo-agent` (hyphen) and the Python module path is
# `puffo_agent` (underscore — Python doesn't allow hyphens in module
# names). The deliberate rename frees `site-packages/puffoagent/` for
# the older standalone `puffoagent` package at
# github.com/puffo-ai/puffoagent so both can pip-install into the
# *same* env without colliding. CLI binary stays `puffo-agent`; home
# dir stays `~/.puffo-agent/`.
name = "puffo-agent"
version = "1.0.7"
description = "Run AI bots on Puffo.ai — local daemon that supervises many bot accounts and handles their LLM loops."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Puffo.ai" },
]
keywords = ["puffo", "ai", "agent", "chatbot", "anthropic", "openai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.9",
    "aiohttp-socks>=0.10",
    "aiosqlite>=0.20",
    "cryptography>=43.0",
    "mcp>=1.0",
    # Pillow stays in the BASE install (not an extra): the inbound-image
    # dimension guard (_downscale_oversized_image) runs on the shared
    # PuffoCoreClient delivery path for EVERY runtime kind — including the
    # cloud cli-local template, which is precisely the template that
    # receives user images. Moving it behind an extra would silently
    # disable the "prevention half" that keeps an oversized image from
    # poisoning the claude session. It's lazy-imported, so the keyless
    # boot chain still never pulls PIL into sys.modules.
    "pillow>=10.0",
    "pyhpke>=0.6",
    "psutil>=5.9",
    "python-socks>=2.4",
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
# --- chat-local LLM providers (cloud-slim) ------------------------------
# The keyless cloud-agent boot chain (daemon + MCP + adapters + bridge)
# never imports the vendor LLM SDKs: worker.py lazy-imports the providers
# only when it builds a chat-local legacy provider, and the provider
# modules import their vendor SDK at module top. So the base install (and
# the cloud cli-local template) carries NEITHER anthropic NOR openai.
# (Pillow is deliberately NOT slimmed out — see [project].dependencies.)
#
#   pip install puffo-agent[anthropic]   — chat-local provider=anthropic
#   pip install puffo-agent[openai]      — chat-local provider=openai
#   pip install puffo-agent[chat-local]  — both providers at once
#
# Building a chat-local provider without the matching extra fails with an
# actionable "rebuild the template with 'pip install puffo-agent[...]'"
# hint — not a raw ImportError. See worker._build_legacy_provider.
anthropic = ["anthropic>=0.25"]
openai = ["openai>=1.30"]
# Back-compat alias: Pillow now ships in the base install (see above), so
# this extra is a no-op for a base install. Kept so the historical
# "pip install puffo-agent[attachments]" hint still resolves.
attachments = ["pillow>=10.0"]
# Convenience: everything a chat-local agent might need in one shot.
# Self-references the component extras so version pins live in ONE place
# and can't drift from the anthropic/openai/attachments extras above.
chat-local = ["puffo-agent[anthropic,openai,attachments]"]
# pip install puffo-agent[gui]  — the PySide6 desktop UI (window + tray).
# Kept out of the base install so `pip install puffo-agent` stays Qt-free
# for headless/cloud daemons; `start`/`run_daemon` never import PySide6.
# The `start --ui` / `start --tray` entry points fail with an actionable
# "install puffo-agent[gui]" hint (see portal/cli.py cmd_start) when the
# extra is absent.
gui = ["pyside6>=6.7"]
# pip install puffo-agent[sdk]  — needed for agents with runtime.kind=sdk
sdk = ["claude-agent-sdk>=0.1.61"]
# cli-local / cli-docker adapters don't need extra Python deps; they
# shell out to the `claude` binary (cli-local) or Docker (cli-docker).
# pip install --editable ".[dev]"  — needed to run the test suite.
# pytest-asyncio is required: several test modules (test_message_store,
# test_ws_client, test_http_client) declare async test functions via
# `@pytest.mark.asyncio`. Without it, those tests silently skip and
# anything using async fixtures errors out.
# chat-local pulls the anthropic + openai SDKs (pillow is already in the
# base install): several pre-existing test modules import those SDKs at
# module top (test_chat_local_tool_use, test_llm_base_url_routing, the
# image-guard tests), so a clean CI box running `pip install -e .[dev]`
# would otherwise error at collection now that the SDKs left the base deps.
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "puffo-agent[chat-local]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[project.urls]
Homepage      = "https://github.com/puffo-ai/puffo-agent"
Source        = "https://github.com/puffo-ai/puffo-agent"
Issues        = "https://github.com/puffo-ai/puffo-agent/issues"

[project.scripts]
puffo-agent = "puffo_agent.portal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"puffo_agent.portal.ui.assets" = ["*.png"]
